--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
+    "tiny-slider": "^2.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
